--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "pyro-ppl>=1.9.1",
+    "scanpy>=1.11.4",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "tqdm>=4.67.1",
